--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -88,40 +88,38 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_books_itemList"
-        android:layout_width="389dp"
-        android:layout_height="425dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline24"
+        android:layout_width="390dp"
+        android:layout_height="467dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.272"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline21" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_bookSale_itemList" />
 
     <Button
         android:id="@+id/btn_topic_itemList"
         android:layout_width="132dp"
         android:layout_height="35dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/roundbutton"
         android:gravity="center"
         android:text="Start New Topic"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline24"
-        app:layout_constraintVertical_bias="0.958" />
+        app:layout_constraintTop_toBottomOf="@+id/rv_books_itemList" />
 
     <ImageView
         android:id="@+id/iv_library_bottom_itemList"
         android:layout_width="53dp"
         android:layout_height="35dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginLeft="144dp"
+        android:layout_marginTop="40dp"
         android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.788"
         app:srcCompat="@drawable/library_icon" />
 
     <ImageView
@@ -141,52 +139,48 @@
         android:id="@+id/iv_timetable_bottom_itemList"
         android:layout_width="53dp"
         android:layout_height="35dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginLeft="76dp"
+        android:layout_marginTop="40dp"
         android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.243"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.788"
         app:srcCompat="@drawable/calendar" />
 
     <ImageView
         android:id="@+id/iv_moodle_bottom_itemList"
         android:layout_width="53dp"
         android:layout_height="35dp"
+        android:layout_marginTop="40dp"
         android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.776"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.788"
         app:srcCompat="@drawable/moodle" />
 
     <ImageView
         android:id="@+id/iv_help_bottom_itemList"
         android:layout_width="53dp"
         android:layout_height="35dp"
+        android:layout_marginTop="40dp"
         android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.788"
         app:srcCompat="@drawable/support" />
 
     <ImageView
         android:id="@+id/iv_dashboard_bottom_itemList"
         android:layout_width="53dp"
         android:layout_height="35dp"
+        android:layout_marginTop="40dp"
         android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.692"
         app:srcCompat="@drawable/home" />
 
     <com.google.android.material.appbar.AppBarLayout
@@ -208,8 +202,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="602dp"
+        app:layout_constraintGuide_percent="0.8" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -224,7 +218,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="570dp"
+        app:layout_constraintGuide_begin="678dp"
         app:layout_constraintGuide_percent="0.88" />
 
     <androidx.constraintlayout.widget.Guideline
