--- a/app/src/main/res/layout/activity_send_msg.xml
+++ b/app/src/main/res/layout/activity_send_msg.xml
@@ -28,27 +28,26 @@
         android:id="@+id/tv_error_sendMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:text="Please type your message before sending"
         android:textColor="@android:color/holo_red_dark"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_msgTo_sendMsg" />
+        app:layout_constraintTop_toTopOf="@+id/guideline30" />
 
     <Button
         android:id="@+id/btn_send_sendMsg"
         android:layout_width="118dp"
         android:layout_height="29dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/roundbutton"
         android:text="Send"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline30" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_error_sendMsg" />
 
     <TextView
         android:id="@+id/tv_msgTo_sendMsg"
