--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,18 +9,21 @@
 
         <TextView
             android:id="@+id/tv_reset_main"
-            android:layout_width="389dp"
-            android:layout_height="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginTop="12dp"
             android:clickable="true"
             android:ems="10"
             android:gravity="center"
             android:inputType="textPersonName"
-            android:text="Forgot your password?"
+            android:text="Forgot Password?"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.693"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_Login_main" />
+            app:layout_constraintTop_toBottomOf="@+id/et_pass_main" />
 
         <EditText
             android:id="@+id/et_email_main"
@@ -47,27 +50,18 @@
 
         <Button
             android:id="@+id/btn_Login_main"
-            android:layout_width="89dp"
-            android:layout_height="37dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="216dp"
+            android:layout_height="31dp"
+            android:layout_marginTop="52dp"
             android:background="@drawable/roundbutton"
             android:text="Login"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_pass_main" />
-
-        <Button
-            android:id="@+id/btn_reg_main"
-            android:layout_width="159dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/roundbutton"
-            android:text="Create an Account"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_reset_main" />
+
+
 
         <EditText
             android:id="@+id/et_pass_main"
@@ -99,7 +93,7 @@
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="28dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -158,6 +152,31 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.905"
             app:layout_constraintGuide_begin="20dp" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="108dp"
+            android:layout_marginLeft="108dp"
+            android:layout_marginTop="8dp"
+            android:text="Don't have an account?"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_Login_main" />
+
+        <TextView
+            android:id="@+id/tv_SignUp_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="108dp"
+            android:layout_marginRight="108dp"
+            android:clickable="true"
+            android:text="Sign Up"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_Login_main" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
