--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -168,14 +168,14 @@
             android:id="@+id/tv_SignUp_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="108dp"
-            android:layout_marginRight="108dp"
             android:clickable="true"
             android:text="Sign Up"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView5"
             app:layout_constraintTop_toBottomOf="@+id/btn_Login_main" />
 
 
